--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -26,7 +26,7 @@
          autodetected from the Configuration. -->
     <bool name="config_showNavigationBar">true</bool>
 
-    <string name="config_orientationSensorType">com.google.sensor.window_orientation</string>
+    <!-- string name="config_orientationSensorType">com.google.sensor.window_orientation</string-->
 
     <!-- Indicate whether closing the lid causes the device to go to sleep and opening
          it causes the device to wake up.
@@ -299,7 +299,7 @@
 
     <!-- Boolean indicating whether or not to revert to default country code when cellular
     radio is unable to find any MCC information to infer wifi country code from -->
-    <bool translatable="false" name="config_wifi_revert_country_code_on_cellular_loss">true</bool>
+    <!-- bool translatable="false" name="config_wifi_revert_country_code_on_cellular_loss">true</bool-->
 
     <!--  Maximum number of supported users -->
     <integer name="config_multiuserMaximumUsers">4</integer>
@@ -382,11 +382,11 @@
             2. Adobe RGB ("Natural")
             3. sRGB ("Standard")
     -->
-    <integer-array name="config_colorTransforms">
+    <!-- integer-array name="config_colorTransforms">
         <item>0</item>
         <item>8</item>
         <item>7</item>
-    </integer-array>
+    </integer-array-->
 
     <!-- Config SoftAP 2G channel list -->
     <string  translatable="false" name="config_wifi_framework_sap_2G_channel_list">6</string>
